# maybe-newznab-client

./: Cargo.toml
src/: client.rs  error.rs  lib.rs
src/common/: error.rs  mod.rs
src/common/models/: caps.rs  error.rs  mod.rs  search.rs  search_result.rs
