[package]
name = "maybe-newznab-client"
version = "0.2.0"
edition = "2021"
description = "An sync/async newznab api client."
authors = ["Vital Reichmuth"]

[dependencies]
log = "0.4.21"
maybe-async = "0.2.10"
reqwest = { version = "0.12.4", features = ["json"], default-features = false}
rss = { version = "2.0.8", features = ["serde"]}
serde = { version = "1.0.203", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.117"
thiserror = "1.0.61"
bytes = "1.6.0"
async-std = { version = "1.12.0", optional = true}

[dependencies.maybe-http-client]
path = "../maybe-http-client"
default-features = false
features = []

[dev-dependencies]
async-std = { version = "1.12.0", features = ["async-attributes", "attributes", "tokio1"] }

[features]

default = ["async"]
async = ["__async", "async-std", "maybe-http-client/async"]
sync = ["__sync", "reqwest/blocking", "maybe-http-client/sync"]

log = ["maybe-http-client/log"]

__async = ["maybe-async/default"]
__sync = ["maybe-async/is_sync"]



